Layout Grid: Fix vertical alignment, round 2 (#254)
* Layout Grid: Fix vertical alignment, round 2

* Fix whitespace.

--- a/blocks/layout-grid/style.scss
+++ b/blocks/layout-grid/style.scss
@@ -165,9 +165,11 @@
 	}
 }
 
+
 /**
  * Parent column alignment
  */
+
 .wp-block-jetpack-layout-grid {
 	&.are-vertically-aligned-top {
 		align-items: flex-start;
@@ -182,12 +184,16 @@
 	}
 }
 
+
 /**
  * Individual column alignment
  */
+
 .wp-block-jetpack-layout-grid-column {
+	// Allow top-aligned columns to span the full height.
 	&.is-vertically-aligned-top {
 		align-self: flex-start;
+		height: 100%;
 	}
 
 	&.is-vertically-aligned-center {
